--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.camunda.internal</groupId>
-  <artifactId>haPDFy-document-creator</artifactId>
+  <artifactId>haPDFy</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <parent>
