--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
       <artifactId>forms</artifactId>
       <version>7.0.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>html2pdf</artifactId>
+      <version>2.0.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
