--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,18 @@
 
   <groupId>org.camunda.internal</groupId>
   <artifactId>haPDFy</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.7.RELEASE</version>
+    <version>1.5.10.RELEASE</version>
   </parent>
 
   <properties>
     <final.name>${project.artifactId}</final.name>
     <java.version>1.8</java.version>
+    <itext.version>7.0.4</itext.version>
   </properties>
 
   <dependencies>
@@ -24,20 +25,37 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!-- add health endpoint -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <!-- expose Prometheus metrics -->
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-spring-legacy</artifactId>
+      <version>1.0.0-rc.7</version>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+      <version>1.0.0-rc.7</version>
+    </dependency>
+    <!-- pdf rendering -->
     <dependency>
       <groupId>com.itextpdf</groupId>
       <artifactId>kernel</artifactId>
-      <version>7.0.4</version>
+      <version>${itext.version}</version>
     </dependency>
     <dependency>
       <groupId>com.itextpdf</groupId>
       <artifactId>layout</artifactId>
-      <version>7.0.4</version>
+      <version>${itext.version}</version>
     </dependency>
     <dependency>
       <groupId>com.itextpdf</groupId>
       <artifactId>forms</artifactId>
-      <version>7.0.4</version>
+      <version>${itext.version}</version>
     </dependency>
 
     <dependency>
