--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.10.RELEASE</version>
+    <version>3.1.5</version>
   </parent>
 
   <properties>
     <final.name>${project.artifactId}</final.name>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
     <itext.version>7.0.4</itext.version>
   </properties>
 
@@ -39,7 +39,6 @@
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
-      <version>1.0.0-rc.7</version>
     </dependency>
     <!-- pdf rendering -->
     <dependency>
@@ -67,6 +66,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
