--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -18,6 +18,14 @@ jobs:
       image-digest: ${{ steps.push.outputs.Digest}}
     steps:
       - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: maven
+      - name: Build Image
+        run: mvn install
       - name: "Authenticate to Google Cloud"
         uses: google-github-actions/auth@v2
         id: auth
@@ -32,8 +40,6 @@ jobs:
           username: "oauth2accesstoken"
           password: "${{ steps.auth.outputs.access_token }}"
           registry: "europe-north1-docker.pkg.dev"
-      - name: Build Image
-        run: mvn install          
       - name: Push image
         id: push
         run: |
