chore(rest/auth): activate basic auth
related to #IN-270

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: haPDFy
+  security:
+    user:
+      name: ${HAPDFY_USERNAME}
+      password: ${HAPDFY_PASSWORD}
 management:
   security:
     enabled: false
